# ns_reni

./: .gitignore  .gitmodules  README.md  pyproject.toml
.devcontainer/: apptainer_nerfstudio.sh  apptainer_shell.sh
notebooks/: nerd.ipynb  old_to_new.ipynb  outpainting_example.ipynb  render.ipynb  reni_tests.ipynb  vn_tests.ipynb
publication/: animations.ipynb  figures_and_tables.ipynb  inverse_task.ipynb  non_convexity.ipynb
publication/figures/: generalisation_to_unseen_images.ipynb  teaser_figure.ipynb
reni/: reni_config.py  reni_model.py  reni_pipeline.py
reni/configs/: nerfacto_reni_config.py  reni_config.py  reni_inverse_config.py  resgan_config.py  sh_sg_envmap_configs.py
reni/data/: reni_datamanager.py  reni_dataparser.py  reni_dataset.py  reni_pixel_sampler.py
reni/discriminators/: discriminators.py
reni/engine/: resgan_optimizer.py  resgan_trainer.py
reni/field_components/: activations.py  field_heads.py  film_siren.py  siren.py  transformer_decoder.py  vn_encoder.py  vn_layers.py
reni/fields/: nerfacto_reni.py  nerfacto_reni_field.py
reni/illumination_fields/: base_illumination_field.py  base_spherical_field.py  environment_map.py  environment_map_field.py  reni_illumination_field.py  reni_illumination_field_with_split_head.py  sg_illumination_field.py  sh_illumination_field.py
reni/model_components/: discriminators.py  illumination_sampler.py  illumination_samplers.py  losses.py  renderers.py  shaders.py  vn_layers.py
reni/models/: inverse_reni.py  nerfacto_reni.py  nerfacto_reni_model.py  reni_inverse_model.py  reni_model.py  resgan_model.py
reni/notebooks/: all_black.exr  reni_tests.ipynb  vn_test.ipynb
reni/pipelines/: nerfacto_reni_pipeline.py  reni_inverse_pipeline.py  (+3 more)
scripts/: download_data.py  download_models.py
tests/: tests.py
(+21 files in other folders)
