[project]
name = "ns_reni"
version = "0.1.0"

dependencies=[
    "nerfstudio>=0.2.0",
    "einops",
]

[tool.setuptools.packages.find]
include = ["reni*"]

[project.entry-points.'nerfstudio.method_configs']
reni = 'reni.reni_config:RENIField'
sh-illumination-field = 'reni.reni_config:SHField'
sg-illumination-field = 'reni.reni_config:SGField'
envrionment-map-field = 'reni.reni_config:EnvMapField'