[project]
name = "ns_reni"
version = "0.1.0"

dependencies=[
    "nerfstudio>=0.3.0",
    "einops",
    "openexr==1.3.8",
    "pyexr",
    "wget",
    "roma",
]

[tool.setuptools.packages.find]
include = ["reni*"]

[project.entry-points.'nerfstudio.method_configs']
reni = 'reni.configs.reni_config:RENIField'
sh-illumination-field = 'reni.configs.sh_sg_envmap_configs:SHField'
sg-illumination-field = 'reni.configs.sh_sg_envmap_configs:SGField'
envrionment-map-field = 'reni.configs.sh_sg_envmap_configs:EnvMapField'
reni-inverse = 'reni.configs.reni_inverse_config:RENIInverse'